--- a/ela_rag_docker/requirements.txt
+++ b/ela_rag_docker/requirements.txt
@@ -74,7 +74,7 @@ pypdfium2==4.30.1
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.0.1
-pytz==2025.1
+psycopg2==2.9.10
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
