--- a/ela_rag_docker/dockerfile
+++ b/ela_rag_docker/dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY . .
 
 # Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --default-timeout=1000 --retries 10 --no-cache-dir -r requirements.txt
 
 # Expose the FastAPI port
 EXPOSE 8000
